--- a/notebooks/Leaflet Test.ipynb
+++ b/notebooks/Leaflet Test.ipynb
@@ -188,7 +188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8285930a5c54951949085d6c23e1ed4",
+       "model_id": "34b950d883b64ca399b4f21af3211835",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f11b07f880ec489eaed82ac39a351c89",
+       "model_id": "cce02ebf46ec46fe9744b92688c757f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -556,7 +556,7 @@
       " |  \n",
       " |  widget_types = <ipywidgets.widgets.widget.WidgetRegistry object>\n",
       " |  \n",
-      " |  widgets = {'13dffe9c71b14a9fbb03bb7bd3e7c809': TileLayer(attribution='...\n",
+      " |  widgets = {'0652dce5ad03488f932ae7be03902ef1': GeoData(data={'type': '...\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors inherited from ipywidgets.widgets.widget.LoggingHasTraits:\n",
