--- a/notebooks/1) CensusBlockIntersectionCityLimits.ipynb
+++ b/notebooks/1) CensusBlockIntersectionCityLimits.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This notenook will use the intersection tool to select the census block we are interested in viewing by using the Austin City Limits full jurisdiction shapefile as our boundary."
+    "# This notenook will use the intersection tool to select the census block we are interested in viewing by using the Austin City Limits full jurisdiction shapefile as our boundary."
    ]
   },
   {
@@ -2434,9 +2434,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "park_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "park_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2448,7 +2448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
