--- a/notebooks/Leaflet Test.ipynb
+++ b/notebooks/Leaflet Test.ipynb
@@ -38,6 +38,7 @@
     "cbg = gpd.read_file(wd+\"data/censusblockgroups/cbggj.geojson\")\n",
     "pop = pd.read_excel(wd+\"data/censustables/ACS_17_5yr_totalpop_allcounties.xlsx\")\n",
     "race = pd.read_excel(wd+\"data/censustables/ACS_17_5yr_race_includinglatinx.xlsx\")\n",
+    "income = gpd.read_file(wd+\"data/blockgroups_censusdata/income.geojson\")\n",
     "halfbuff = gpd.read_file(wd+\"data/coaparks_buffer/halfbuffgj.geojson\")\n",
     "quarbuff = gpd.read_file(wd+\"data/coaparks_buffer/quarterbuffgj.geojson\")\n",
     "varibuff = gpd.read_file(wd+\"data/coaparks_buffer/varibuffgj.geojson\")\n",
@@ -446,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,13 +469,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b7203f0fd4a4d7c8fe23d921d2bfc76",
+       "model_id": "da70ac9da78940b8abffe33cd6d7d93c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -488,7 +489,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b173c4b454984ed0a6fa78734fe1d722",
+       "model_id": "9cbc45f22cdd40f482e48981f0359af2",
        "version_major": 2,
        "version_minor": 0
       },
