--- a/notebooks/3) Leaflet Vis.ipynb
+++ b/notebooks/3) Leaflet Vis.ipynb
@@ -99,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d78aa08165f74fe6b06befbc75d643aa",
+       "model_id": "9b495363a3ed413d9a2927346fe61221",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,7 +119,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a890dc0866fd4968907f1b74b1ffb565",
+       "model_id": "2eacccd040ba4679a99a5702306fa590",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,9 +201,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "park_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "park_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -215,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
