--- a/notebooks/3) Leaflet Vis.ipynb
+++ b/notebooks/3) Leaflet Vis.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "081617c1f56b4d198fde836eea7ea5ef",
+       "model_id": "6a2dc9eaf034463c8e9d82275dd03b58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe0334b1428a47c19678918f2c39901b",
+       "model_id": "e138a15d4eb34df7b95129a92515d652",
        "version_major": 2,
        "version_minor": 0
       },
@@ -194,13 +194,20 @@
     "m\n",
     "ipywidgets.VBox([m, label_name, label_parks, label_buff, label_pop])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "park_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "park_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -212,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
