--- a/notebooks/3) Leaflet Vis.ipynb
+++ b/notebooks/3) Leaflet Vis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "                       name = 'Variable Mile Buffer')\n",
     "\n",
     "pop_data = ipy.GeoData(geo_dataframe=pop,\n",
-    "                    style={'color': 'black', 'fillColor': '#ac7c72', 'opacity':0.5, 'weight':1, 'dashArray':'2', 'fillOpacity':0.6},\n",
+    "                    style={'color': 'black', 'fillColor': '#d4d4d4', 'opacity':0.5, 'weight':1, 'dashArray':'2', 'fillOpacity':0.6},\n",
     "                    hover_style={'fillColor': 'red' , 'fillOpacity': 0.2},\n",
     "                    name = 'Population Data')\n",
     "\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5860caa04fd94a5ca3137c3993a4c12d",
+       "model_id": "48998622f749413387443063336777c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,12 +121,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b38aacc3053245daa48733e3a4ec075d",
+       "model_id": "3e3fc2393d7345239fd57b29f41603c7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Map(basemap={'url': 'http://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServ…"
+       "VBox(children=(Map(center=[30.26, -97.74], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in…"
       ]
      },
      "metadata": {},
@@ -219,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
