--- a/notebooks/2) ParkServiceArea.ipynb
+++ b/notebooks/2) ParkServiceArea.ipynb
@@ -403,6 +403,8 @@
    "source": [
     "coaparks = gpd.read_file(wd+\"data/coaparks/BOUNDARIES_city_of_austin_parks.shp\")\n",
     "\n",
+    "#Link to data and metadata: https://data.austintexas.gov/Locations-and-Maps/BOUNDARIES_city_of_austin_parks/8f2b-a4q5\n",
+    "\n",
     "coaparks\n",
     "\n",
     "# Separate these before hand! \n",
