--- a/notebooks/Access_HalfBuffer_ACS17_5yr_shapefiles.ipynb
+++ b/notebooks/Access_HalfBuffer_ACS17_5yr_shapefiles.ipynb
@@ -318,10 +318,10 @@
     "\n",
     "    race_ns['weight'] = race_ns['new_area']/ race_ns['fullarea_race']\n",
     "    \n",
-    "    race_ns['TotPopNS'] = (race_ns['weight'] * race_ns['Total_POP_']).astype(int)\n",
-    "    race_ns['NotHisNS'] = (race_ns['weight'] * race_ns['Not Hisp_1']).astype(int)\n",
-    "    race_ns['WhiteNS'] = (race_ns['weight'] * race_ns['White; N_1']).astype(int)\n",
-    "    race_ns['HispanNS'] = (race_ns['weight'] * race_ns['Hispanic_1']).astype(int)\n",
+    "    race_ns['TotPopNS'] = (race_ns['weight'] * race_ns['Total_POP_'])\n",
+    "    race_ns['NotHisNS'] = (race_ns['weight'] * race_ns['Not Hisp_1'])\n",
+    "    race_ns['WhiteNS'] = (race_ns['weight'] * race_ns['White; N_1'])\n",
+    "    race_ns['HispanNS'] = (race_ns['weight'] * race_ns['Hispanic_1'])\n",
     "\n",
     "race_ns['Norm_byArea'] = race_ns['TotPopNS']/race_ns['area_acre']\n",
     "race_ns['Norm_nonhis'] = race_ns['NotHisNS']/race_ns['area_acre']\n",
@@ -457,24 +457,24 @@
     "    income_ns['Lessthan25,000'] = ((income_ns['weight'] * income_ns['Less tha_1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$10,000 _1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$15,000 _1'])\\\n",
-    "                                        +(income_ns['weight'] * income_ns['$20,000 _1'])).astype(int)\n",
+    "                                        +(income_ns['weight'] * income_ns['$20,000 _1']))\n",
     "    \n",
     "    income_ns['25,000to49,999'] = ((income_ns['weight'] * income_ns['$25,000 _1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$30,000 _1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$35,000 _1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$40,000 _1'])\\\n",
-    "                                        +(income_ns['weight'] * income_ns['$45,000 _1'])).astype(int)\n",
+    "                                        +(income_ns['weight'] * income_ns['$45,000 _1']))\n",
     "    \n",
     "    income_ns['50,000to74,999'] = ((income_ns['weight'] * income_ns['$50,000 _1'])\\\n",
-    "                                        +(income_ns['weight'] * income_ns['$60,000 _1'])).astype(int)\n",
+    "                                        +(income_ns['weight'] * income_ns['$60,000 _1']))\n",
     "    \n",
-    "    income_ns['75,000to99,999'] = (income_ns['weight'] * income_ns['$75,000 _1']).astype(int)\n",
+    "    income_ns['75,000to99,999'] = (income_ns['weight'] * income_ns['$75,000 _1'])\n",
     "    \n",
     "    income_ns['100,000to149,999'] = ((income_ns['weight'] * income_ns['$100,000_1'])\\\n",
-    "                                            +(income_ns['weight'] * income_ns['$125,000_1'])).astype(int)\n",
+    "                                            +(income_ns['weight'] * income_ns['$125,000_1']))\n",
     "    \n",
     "    income_ns['150,000ormore'] = ((income_ns['weight'] * income_ns['$150,000_1'])\\\n",
-    "                                        +(income_ns['weight'] * income_ns['$200,000_1'])).astype(int)\n",
+    "                                        +(income_ns['weight'] * income_ns['$200,000_1']))\n",
     "    \n",
     "income_ns['Norm_TotPopNS'] = income_ns['TotPopNS']/income_ns['area_acre']\n",
     "income_ns['Norm_Lessthan25,000'] = income_ns['Lessthan25,000']/income_ns['area_acre']\n",
