--- a/notebooks/Access_Quarter Buffer_ACS17_5yr_shapefiles.ipynb
+++ b/notebooks/Access_Quarter Buffer_ACS17_5yr_shapefiles.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -325,10 +325,10 @@
     "\n",
     "    race_ns['weight'] = race_ns['new_area']/ race_ns['fullarea_race']\n",
     "    \n",
-    "    race_ns['TotPopNS'] = (race_ns['weight'] * race_ns['Total_POP_']).astype(int)\n",
-    "    race_ns['NotHisNS'] = (race_ns['weight'] * race_ns['Not Hisp_1']).astype(int)\n",
-    "    race_ns['WhiteNS'] = (race_ns['weight'] * race_ns['White; N_1']).astype(int)\n",
-    "    race_ns['HispanNS'] = (race_ns['weight'] * race_ns['Hispanic_1']).astype(int)\n",
+    "    race_ns['TotPopNS'] = (race_ns['weight'] * race_ns['Total_POP_'])\n",
+    "    race_ns['NotHisNS'] = (race_ns['weight'] * race_ns['Not Hisp_1'])\n",
+    "    race_ns['WhiteNS'] = (race_ns['weight'] * race_ns['White; N_1'])\n",
+    "    race_ns['HispanNS'] = (race_ns['weight'] * race_ns['Hispanic_1'])\n",
     "\n",
     "race_ns['Norm_byArea'] = race_ns['TotPopNS']/race_ns['area_acre']\n",
     "race_ns['Norm_nonhis'] = race_ns['NotHisNS']/race_ns['area_acre']\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -464,24 +464,24 @@
     "    income_ns['Lessthan25,000'] = ((income_ns['weight'] * income_ns['Less tha_1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$10,000 _1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$15,000 _1'])\\\n",
-    "                                        +(income_ns['weight'] * income_ns['$20,000 _1'])).astype(int)\n",
+    "                                        +(income_ns['weight'] * income_ns['$20,000 _1']))\n",
     "    \n",
     "    income_ns['25,000to49,999'] = ((income_ns['weight'] * income_ns['$25,000 _1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$30,000 _1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$35,000 _1'])\\\n",
     "                                        +(income_ns['weight'] * income_ns['$40,000 _1'])\\\n",
-    "                                        +(income_ns['weight'] * income_ns['$45,000 _1'])).astype(int)\n",
+    "                                        +(income_ns['weight'] * income_ns['$45,000 _1']))\n",
     "    \n",
     "    income_ns['50,000to74,999'] = ((income_ns['weight'] * income_ns['$50,000 _1'])\\\n",
-    "                                        +(income_ns['weight'] * income_ns['$60,000 _1'])).astype(int)\n",
+    "                                        +(income_ns['weight'] * income_ns['$60,000 _1']))\n",
     "    \n",
-    "    income_ns['75,000to99,999'] = (income_ns['weight'] * income_ns['$75,000 _1']).astype(int)\n",
+    "    income_ns['75,000to99,999'] = (income_ns['weight'] * income_ns['$75,000 _1'])\n",
     "    \n",
     "    income_ns['100,000to149,999'] = ((income_ns['weight'] * income_ns['$100,000_1'])\\\n",
-    "                                            +(income_ns['weight'] * income_ns['$125,000_1'])).astype(int)\n",
+    "                                            +(income_ns['weight'] * income_ns['$125,000_1']))\n",
     "    \n",
     "    income_ns['150,000ormore'] = ((income_ns['weight'] * income_ns['$150,000_1'])\\\n",
-    "                                        +(income_ns['weight'] * income_ns['$200,000_1'])).astype(int)\n",
+    "                                        +(income_ns['weight'] * income_ns['$200,000_1']))\n",
     "    \n",
     "income_ns['Norm_TotPopNS'] = income_ns['TotPopNS']/income_ns['area_acre']\n",
     "income_ns['Norm_Lessthan25,000'] = income_ns['Lessthan25,000']/income_ns['area_acre']\n",
